# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "queryrefiner"
version = "0.1.0"
dependencies = [
    "transformers>=4.30.0",
    "torch>=1.9.0",
    "datasets>=2.0.0",
]
requires-python = ">=3.6"
authors = [
    {name = "Yage Zhang", email = "laqeey@gmail.com"},
]
description = "A Python library for query refinement and code generation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]